--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
     "description": "Find paths in conversations.",
     "main": "conversations.js",
     "scripts": {
-      "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "Fiodor Tretyakov",
-    "license": "MIT"
-  }
-  
+    "license": "MIT",
+    "devDependencies": {
+        "eslint": "^5.16.0"
+    },
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/FiodorTretyakov/conversations"
+    }
+}
