--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
     "cSpell.words": [
         "Fiodor",
         "Tretyakov"
-    ]
+    ],
+    "files.exclude": {
+        "node_modules": true
+    }
 }
