--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/FiodorTretyakov/conversations"
+        "url": ""
     }
 }
