Added to dictionary.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Fiodor",
         "Tretyakov",
+        "allornothing",
         "readonly"
     ],
     "files.exclude": {
