--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Find paths in conversations.",
     "main": "conversations.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "node ./node_modules/mocha/bin/mocha"
     },
     "author": "Fiodor Tretyakov",
     "license": "MIT",
