--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "Find paths in conversations",
     "main": "conversations.js",
     "scripts": {
-        "test": "node ./node_modules/mocha/bin/mocha"
+        "test": "nyc node ./node_modules/mocha/bin/mocha"
     },
     "author": "Fiodor Tretyakov",
     "license": "MIT",
@@ -15,7 +15,8 @@
         "eslint-plugin-node": "^9.1.0",
         "eslint-plugin-promise": "^4.1.1",
         "eslint-plugin-standard": "^4.0.0",
-        "mocha": "^6.1.4"
+        "mocha": "^6.1.4",
+        "nyc": "^14.1.1"
     },
     "repository": {
         "type": "git",
